fileld change  vendor to company

--- a/src/app/usit/components/consultant-components/consultant-interviews/consultant-interviews.component.html
+++ b/src/app/usit/components/consultant-components/consultant-interviews/consultant-interviews.component.html
@@ -62,7 +62,7 @@
                     <th mat-header-cell *matHeaderCellDef 
                         sortActionDescription="Sort by Vendor" mat-sort-header>
                         Vendor </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.vendor}}
+                    <td mat-cell *matCellDef="let element"> {{element?.company}}
                     </td>
                 </ng-container>
 
