--- a/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-report.component.html
+++ b/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-report.component.html
@@ -8,7 +8,7 @@
         <div class="open-req-report-search">
             <form [formGroup]="sourcingreport" (ngSubmit)="onSubmit()">
                 <mat-card>
-                    <mat-card-content style="display: flex; align-items: center; justify-content: center;">
+                    <mat-card-content style="display: flex; align-items: center; justify-content: center; gap: 10px">
                         <mat-form-field color="accent">
                             <mat-label>Choose Starting Date</mat-label>
                             <input matInput [matDatepicker]="picker1" class="form-control"
@@ -28,8 +28,8 @@
                                 required</mat-error>
                         </mat-form-field>
 
-                        <button mat-raised-button color="primary">Submit</button>&nbsp;
-                        <button mat-raised-button color="warn" (click)="reset()">Reset</button>&nbsp;
+                        <button mat-raised-button color="primary">Submit</button>
+                        <button mat-raised-button color="warn" (click)="reset()">Reset</button>
 
                         <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;"
                             (click)="excelImport()">Excel Export</button>
@@ -60,76 +60,53 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let data of c_data let i=index">
-                                        <td let i=index nowrap>{{ generateSerialNumber(i)}}</td>
-                                        <td style="font-weight: bold;">
-                                            {{data.pseudoname}}
-                                        </td>
-                                        <td style="font-weight: bold;">
-                                            {{data.req_count}}
+                                        <td class="narvee">
+                                            <a (click)="subOrIntPopup('submission')">{{data.submission}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a>{{data.submission}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('schedule')">{{data.schedule}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a>
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#interview">{{data.interview}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('onhold')">{{data.onhold}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.schedule}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('closed')">{{data.closed}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.onhold}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('rejected')">{{data.rejected}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.closed}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('onboarded')">{{data.onboarded}}</a>
                                         </td>
                                         <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.rejected}}</a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('backout')">{{data.backout}}</a>
                                         </td>
+    
                                         <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.onboarded}}</a>
-                                        </td>
-                                        <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.backout}}</a>
-                                        </td>
-                                        <td class="narvee">
-                                            <a data-bs-toggle="modal"
-                                                data-bs-target="#consultantInfo">{{data.consultant}} </a>
-                                        </td>
-
-                                        <td class="narvee">
-                                            <a data-bs-toggle="modal" data-bs-target="#interview">{{data.selected}} </a>
+                                            <a data-bs-toggle="modal" data-bs-target="#interview"
+                                                (click)="subOrIntPopup('selected')">{{data.selected}} </a>
                                         </td>
                                     </tr>
-                                    <!-- <tr class="narvee total sticky">
-                              <td colspan="2">Total</td>
-                              <td >{{reqsTotal}}</td>
-                              <td>{{subTotal}}</td>
-                              <td>{{intTotal}}</td>
-                              <td>{{scheduleTotal}}</td>
-                              <td>{{holdTotal}}</td>
-                              <td>{{closedTotal}}</td>
-                              <td>{{rejectTotal}}</td>
-                              <td>{{onboardedCnt}}</td>
-                              <td>{{backoutCnt}}</td>
-                              <td>{{consultantTotal}}</td>
-                              <td>{{selectTotal}}</td>
-                            </tr> -->
                                 </tbody>
                             </table>
                         </div>
                     </section>
                 </div>
-
+    
                 <div class="paginator">
                     <!-- paginator -->
                     <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-                      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-                      [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
-                    </mat-paginator> -->
+                          [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+                          [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+                        </mat-paginator> -->
                 </div>
-
+    
             </mat-card-content>
         </mat-card>
     </div>
