employee-all-report changes

--- a/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-interview-report/consultant-all-interview-report.component.html
+++ b/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-interview-report/consultant-all-interview-report.component.html
@@ -1,11 +1,11 @@
 <div mat-dialog-content style="padding: 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center">
         <h1 mat-dialog-title>Inteviews </h1>
-        <div style="display: flex; gap: 8px">
+        <!-- <div style="display: flex; gap: 8px">
             <button mat-raised-button style="background-color: #774caf; color: white">
                 Close
             </button>
-        </div>
+        </div> -->
     </div>
 
     <div class="row" oncopy="return false" onpaste="return false" oncut="return false"
