--- a/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-submission-report/consultant-all-submission-report.component.html
+++ b/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-submission-report/consultant-all-submission-report.component.html
@@ -3,14 +3,14 @@
       style="display: flex; justify-content: space-between; align-items: center"
     >
       <h1 mat-dialog-title>Submission</h1>
-      <div style="display: flex">
+      <!-- <div style="display: flex">
         <button
           mat-raised-button
           style="background-color: #774caf; color: white"
         >
           Close
         </button>
-      </div>
+      </div> -->
     </div>
   
     <div
