--- a/src/app/usit/components/dashboard/emp-applied-jobs-list/emp-applied-jobs-list.component.html
+++ b/src/app/usit/components/dashboard/emp-applied-jobs-list/emp-applied-jobs-list.component.html
@@ -1,51 +1,93 @@
-<div mat-dialog-content style="padding: 10px;">
-    <div
-      style="display: flex; justify-content: space-between; align-items: center"
-    >
-      <h1 mat-dialog-title>Submission</h1>
-      <div style="display: flex">
-        <button
-          mat-raised-button
-          style="background-color: #774caf; color: white"
-        >
-          Close
-        </button>
-      </div>
-    </div>
-  
-    <div
-      class="row"
-      oncopy="return false"
-      onpaste="return false"
-      oncut="return false"
-      style="height: 700px; overflow: auto"
-    >
-      <table class="table table-light table-bordered">
-        <thead class="thead-light sticky">
-          <tr>
-            <th>S.No</th>
-            <th>DOS</th>
-            <th>Requirement</th>
-            <th>Impl Partner</th>
-            <th>End Client</th>
-            <th>Vendor</th>
-            <th>Project Location</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody class="tbody">
-          <tr *ngFor="let s of dataSource; let i = index">
-            <td>{{ i + 1 }}</td>
-            <td>{{ s.createddate }}</td>
-            <td>{{ s.position }}</td>
-            <td>{{ s.implpartner }}</td>
-            <td>{{ s.endclient }}</td>
-            <td>{{ s.vendor }}</td>
-            <td>{{ s.projectlocation }}</td>
-            <td>{{ s.substatus }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div class="hot-list-container">
+  <div class="header-container mat-elevation-z1">
+      <span class="header-text">
+          Applied Jobs
+      </span>
   </div>
-  
+
+  <div id="table-container" class="table-wrapper">
+      <section class="mat-elevation-z8 hot-list-table-style">
+          <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
+
+              <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+              <!-- SNo Column -->
+              <ng-container matColumnDef="SerialNum">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 1%">
+                      S.No </th>
+                  <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
+              </ng-container>
+
+              <!-- Posted on Column-->
+              <ng-container matColumnDef="postedon">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by postedon"
+                      style="width: 2%">Posted On</th>
+                  <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
+                      date:'MM-dd-yyyy HH:mm'  }} </td>
+              </ng-container>
+
+              <!-- Job Title Column-->
+              <ng-container matColumnDef="job_title">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title"
+                      style="width: 20%">
+                      Title </th>
+                  <td mat-cell *matCellDef="let element" style="width: 20%">
+                      <span class="consultant-name" (click)="goToJobDescription(element)">
+                      {{element?.job_title|titlecase}}
+                      </span>
+                  </td>
+              </ng-container>
+
+              <!-- Category Column-->
+              <ng-container matColumnDef="category_skill">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category" style="width: 13%">
+                      Category </th>
+                  <td mat-cell *matCellDef="let element"style="width: 13%">
+                      {{ element?.category_skill | titlecase }} </td>
+              </ng-container>
+
+              <!-- Employment Type Column-->
+              <ng-container matColumnDef="employment_type">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by employment_type" style="width: 3%"> Emp Type </th>
+                  <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
+              </ng-container>
+
+              <!-- Job Location Column-->
+              <ng-container matColumnDef="job_location">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Job Location" style="width: 10%"> Location </th>
+                  <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
+              </ng-container>
+
+              <!-- Source Column-->
+              <ng-container matColumnDef="source">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
+                      style="width: 3%">Source</th>
+                  <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
+              </ng-container>
+              
+              <!-- Status Column-->
+              <!-- <ng-container matColumnDef="Status">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"
+                      style="width: 3%">Status</th>
+                  <td mat-cell *matCellDef="let element" nowrap style="width: 3%">{{ element?.status | titlecase}} </td>
+              </ng-container> -->
+
+              <!-- table ROW -->
+              <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+          </table>
+          <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+      </section>
+  </div>
+
+
+  <div class="paginator">
+      <!-- paginator -->
+      <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+          [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+          [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+      </mat-paginator> -->
+  </div>
+
+</div>
