--- a/src/app/usit/components/dashboard/emp-interviews-list/emp-interviews-list.component.html
+++ b/src/app/usit/components/dashboard/emp-interviews-list/emp-interviews-list.component.html
@@ -1,53 +1,111 @@
-<div mat-dialog-content style="padding: 10px;">
-    <div style="display: flex; justify-content: space-between; align-items: center">
-        <h1 mat-dialog-title>Inteviews </h1>
-        <div style="display: flex; gap: 8px">
-            <button mat-raised-button style="background-color: #774caf; color: white">
-                Close
-            </button>
-        </div>
+<div class="submission-container">
+    <div class="header-container mat-elevation-z1">
+        <span class="header-text">
+            Interviews
+        </span>
+    </div>
+    <div id="table-container" class="table-wrapper">
+        <section class="mat-elevation-z8 interview-table-style">
+            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
+
+                <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+                <!-- SNo Column mat-sort-header-->
+                <ng-container matColumnDef="SerialNum">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
+                        S.No </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+                </ng-container>
+
+                <!-- Interview ID-->
+                <ng-container matColumnDef="InterviewId">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewId" mat-sort-header> Interview ID
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.interviewno}} </td>
+                </ng-container>
+
+                <!-- Date & Time of Interview -->
+                <ng-container matColumnDef="DateAndToI">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateAndToI" mat-sort-header>
+                        Date & Time of Interview </th>
+                    <td mat-cell *matCellDef="let element" nowrap>
+                        {{element?.interview_date | date:'MM-dd-yyyy HH:mm'}} {{element?.time_zone}}</td>
+                </ng-container>
+
+                <!-- Round -->
+                <ng-container matColumnDef="Round">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Round" mat-sort-header> Round </th>
+                    <td mat-cell *matCellDef="let element">{{element?.round}} </td>
+                </ng-container>
+
+                <!-- Mode-->
+                <ng-container matColumnDef="Mode">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Mode" mat-sort-header>
+                        Mode </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.mode}}
+                    </td>
+                </ng-container>
+
+                <!-- Vendor-->
+                <ng-container matColumnDef="Vendor">
+                    <th mat-header-cell *matHeaderCellDef 
+                        sortActionDescription="Sort by Vendor" mat-sort-header>
+                        Vendor </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.company}}
+                    </td>
+                </ng-container>
+
+                <!-- Implementation Partner-->
+                <ng-container matColumnDef="ImplementationPartner">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ImplementationPartner" mat-sort-header> Implementation Partner </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.implpartner}}
+                    </td>
+                </ng-container>
+
+                <!-- Client -->
+                <ng-container matColumnDef="Client">
+                    <th mat-header-cell *matHeaderCellDef 
+                        sortActionDescription="Sort by Client" mat-sort-header> Client </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.endclient}}
+                    </td>
+                </ng-container>
+
+                <!-- Date of Submission Column -->
+                <ng-container matColumnDef="DateOfSubmission">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateOfSubmission" mat-sort-header>
+                        Date of Submission</th>
+                    <td mat-cell *matCellDef="let element"> {{element.createddate | date:'MM-dd-yyyy'}}
+                    </td>
+                </ng-container>
+
+                <!-- Interview Status Column -->
+                <ng-container matColumnDef="InterviewStatus">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewStatus" mat-sort-header>
+                     Status
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.interview_status}} </td>
+                </ng-container>
+
+                <!-- table columns ends  -->
+                <!-- table ROW -->
+                <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+            </table>
+            <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+        </section>
+        <hr>
     </div>
 
-    <div class="row" oncopy="return false" onpaste="return false" oncut="return false"
-        style="height: 700px; overflow: auto">
-        <table class="table table-light table-bordered">
-            <thead class="thead-light sticky">
-                <tr>
-                    <th>S.No</th>
-                    <th>Interview No</th>
-                    <th>Consultant Name</th>
-                    <th>Date & Time Of Interview</th>
-                    <th>Round</th>
-                    <th>Mode</th>
-                    <th>Vendor</th>
-                    <th>Client</th>
-                    <th>Date Of Submission</th>
-                    <th>Employee Name</th>
-                    <th>Interview Status</th>
-                </tr>
-            </thead>
-            <tbody class="tbody">
-                <tr *ngFor="let data of dataSource; let i = index">
-                    <td>
-                        {{ i + 1 }}
-                    </td>
-                    <td>
-                        {{ data.interviewno }}
-                    </td>
+    <div class="paginator">
+        <!-- paginator -->
+        <!-- <mat-paginator   (page)="handlePageEvent($event)"
+          [length]="totalItems" [pageSize]="pageSize"
+          [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+          [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+          [hidePageSize]="true"
+          [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator> -->
+      </div>
 
-                    <td>
-                        {{ data.name }}
-                    </td>
-                    <td>{{ data.interview_date }} ({{ data.time_zone }})</td>
-                    <td>{{ data.round }}</td>
-                    <td>{{ data.mode }}</td>
-                    <td>{{ data.vendor }}</td>
-                    <td>{{ data.endclient }}</td>
-                    <td>{{ data.createddate }}</td>
-                    <td>{{ data.pseudoname }}</td>
-                    <td>{{ data.interview_status }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
