--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
@@ -1,51 +1,122 @@
-<div mat-dialog-content style="padding: 10px;">
-    <div
-      style="display: flex; justify-content: space-between; align-items: center"
-    >
-      <h1 mat-dialog-title>Submission</h1>
-      <div style="display: flex">
-        <button
-          mat-raised-button
-          style="background-color: #774caf; color: white"
-        >
-          Close
-        </button>
-      </div>
-    </div>
-  
-    <div
-      class="row"
-      oncopy="return false"
-      onpaste="return false"
-      oncut="return false"
-      style="height: 700px; overflow: auto"
-    >
-      <table class="table table-light table-bordered">
-        <thead class="thead-light sticky">
-          <tr>
-            <th>S.No</th>
-            <th>DOS</th>
-            <th>Requirement</th>
-            <th>Impl Partner</th>
-            <th>End Client</th>
-            <th>Vendor</th>
-            <th>Project Location</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody class="tbody">
-          <tr *ngFor="let s of dataSource; let i = index">
-            <td>{{ i + 1 }}</td>
-            <td>{{ s.createddate }}</td>
-            <td>{{ s.position }}</td>
-            <td>{{ s.implpartner }}</td>
-            <td>{{ s.endclient }}</td>
-            <td>{{ s.vendor }}</td>
-            <td>{{ s.projectlocation }}</td>
-            <td>{{ s.substatus }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div class="submission-container">
+  <div class="header-container mat-elevation-z1">
+      <span class="header-text">
+          Submissions
+      </span>
   </div>
-  
+  <div id="table-container" class="table-wrapper">
+      <section class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
+
+              <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+              <!-- SNo Column mat-sort-header-->
+              <ng-container matColumnDef="SerialNum">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+                      mat-sort-header>
+                      S.No </th>
+                  <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+              </ng-container>
+              <!-- Date-->
+              <ng-container matColumnDef="Dos">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Date" mat-sort-header> DOS
+                  </th>
+                  <td mat-cell *matCellDef="let element" nowrap> {{element?.createddate | date:'MM-dd-yyyy HH:mm'}}
+                  </td>
+              </ng-container>
+              <!-- ID-->
+              <ng-container matColumnDef="submissionId">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by submissionId" mat-sort-header> Submission
+                      ID </th>
+                  <td mat-cell *matCellDef="let element">
+                      {{element?.subno}}
+                  </td>
+              </ng-container>
+              <!-- Name-->
+              <ng-container matColumnDef="Consultant">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Consultant" mat-sort-header>
+                      Consultant </th>
+                  <td mat-cell *matCellDef="let element">
+                      {{element?.consultantname|titlecase}}
+                  </td>
+              </ng-container>
+               
+              <!-- Requirement-->
+              <ng-container matColumnDef="Requirement">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Requirement" mat-sort-header>
+                      Requirement
+                  </th>
+                  <td mat-cell *matCellDef="let element">
+                      {{ element?.position | titlecase}}
+                  </td>
+              </ng-container>
+
+              <!-- Implementation Partner-->
+              <ng-container matColumnDef="ImplementationPartner">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by ImplementationPartner"
+                      mat-sort-header>
+                      IP / Vendor </th>
+                  <td mat-cell *matCellDef="let element"> {{element?.implpartner | titlecase}}
+                  </td>
+              </ng-container>
+              <!-- End Client-->
+              <ng-container matColumnDef="EndClient">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by EndClient" mat-sort-header> End
+                      Client </th>
+                  <td mat-cell *matCellDef="let element"> {{element?.endclient | titlecase}}
+                  </td>
+              </ng-container>
+              <!-- Third Party Vendor -->
+              <ng-container matColumnDef="Vendor">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Current Vendor"
+                      mat-sort-header> Third Party Vendor </th>
+                  <td mat-cell *matCellDef="let element"> {{element?.vendor|titlecase}}
+                  </td>
+              </ng-container>
+
+              <!-- Project Location Column -->
+              <ng-container matColumnDef="ProjectLocation">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by ProjectLocation"
+                      mat-sort-header>
+                      Project Location</th>
+                  <td mat-cell *matCellDef="let element"> {{element.projectlocation | titlecase}} </td>
+              </ng-container>
+
+              <!-- Status Column -->
+              <ng-container matColumnDef="Status">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status" mat-sort-header>
+                      Status
+                  </th>
+                  <td mat-cell *matCellDef="let element"> {{element.substatus | titlecase}} </td>
+              </ng-container>
+
+              <!-- Sub Status Column -->
+              <!-- <ng-container matColumnDef="SubStatus">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by SubStatus" mat-sort-header>
+                      Sub Status
+                  </th>
+                  <td mat-cell *matCellDef="let element"> {{element.status | titlecase}} </td>
+              </ng-container> -->
+
+              
+              <!-- table columns ends  -->
+              <!-- table ROW -->
+              <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+          </table>
+          <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+      </section>
+      <hr>
+  </div>
+
+  <div class="paginator">
+
+      <!-- paginator -->
+      <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+          [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+          [hidePageSize]="hidePageSize" [pageIndex]="currentPageIndex" aria-label="Select page">
+      </mat-paginator> -->
+  </div>
+
+</div>
