--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
@@ -1,52 +1,58 @@
-table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    min-width: 350px;
-  }
-  table tr th,
-  table tr td {
-    border-right: 1px solid #bbb;
-    border-bottom: 1px solid #bbb;
-    padding: 5px;
-  }
-  table tr th:first-child,
-  table tr td:first-child {
-    border-left: 1px solid #bbb;
-  }
-  table tr th {
-    background: #d5e7e7;
-    border-top: 1px solid #bbb;
-    text-align: left;
-  }
-  
-  /* top-left border-radius */
-  table tr:first-child th:first-child {
-    border-top-left-radius: 6px;
-  }
-  
-  /* top-right border-radius */
-  table tr:first-child th:last-child {
-    border-top-right-radius: 6px;
-  }
-  
-  /* bottom-left border-radius */
-  table tr:last-child td:first-child {
-    border-bottom-left-radius: 6px;
-  }
-  
-  /* bottom-right border-radius */
-  table tr:last-child td:last-child {
-    border-bottom-right-radius: 6px;
-  }
-  .show {
-    display: none;
-  }
-  table {
-    font-size: 80%;
-    user-select: none;
-  }
-  table th {
-    font-weight: 500;
-  }
-  
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  top: 0;
+  overflow: hidden;
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+}
+
+.mat-column-SerialNum,
+.mat-column-Dos,
+.mat-column-HeadQuarter,
+.mat-column-Id,
+.mat-column-Consultant,
+.mat-column-TrackSI,
+.mat-column-Requirement,
+.mat-column-ImplementationPartner,
+.mat-column-EndClient,
+.mat-column-Vendor,
+.mat-column-SubRate,
+.mat-column-ProjectLocation,
+.mat-column-SubmittedBy,
+.mat-column-Status,
+.mat-column-SubStatus {
+    border-right: 1px solid lightgray;
+}
+
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0 4px 0 4px;
+}
+
+.mat-mdc-header-row {
+  height: 30px !important;
+}
+
+.mat-mdc-row {
+  height: 30px !important;
+}
+
+.mat-mdc-header-row {
+  background-color: rgb(213, 231, 231);
+  top: 0;
+}
+
+.no-data-found {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin-top: 64px;
+}
