--- a/src/app/components/register-consultant/register-consultant.component.scss
+++ b/src/app/components/register-consultant/register-consultant.component.scss
@@ -42,7 +42,7 @@
   }
   
   .header-no-padding {
-    padding: 0 16px 0 0;
+    padding: 0;
     text-align: center;
   }
   
@@ -173,55 +173,55 @@
 /**** UPLOAD DOCUMENTS - STARTS ****/
 
 // HEADER
-.header-upload-documents {
-  display: flex;
-  height: 48px;
-  background-color: whitesmoke;
-  align-items: center;
-  margin: 0px 2px 10px 6px;
-}
+// .header-upload-documents {
+//   display: flex;
+//   height: 48px;
+//   background-color: whitesmoke;
+//   align-items: center;
+//   margin: 0px 2px 10px 6px;
+// }
 
-.header-upload-text {
-  margin-left: 4px;
-  font-weight: 400;
-  font-size: larger;
-}
+// .header-upload-text {
+//   margin-left: 4px;
+//   font-weight: 400;
+//   font-size: larger;
+// }
 
 
-.upload-doc-cotainer {
-  display: flex;
-  flex-direction: row;
-}
+// .upload-doc-cotainer {
+//   display: flex;
+//   flex-direction: row;
+// }
 
 .upload-inp-container {
   display: flex;
 }
 
-.upload-doc-left {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// .upload-doc-left {
+//   width: 50%;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
 
-.upload-doc-right {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// .upload-doc-right {
+//   width: 50%;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
 
-.upload-doc-cotainer .upload-doc-left .mat-mdc-form-field {
-  width: 95%;
-}
+// .upload-doc-cotainer .upload-doc-left .mat-mdc-form-field {
+//   width: 95%;
+// }
 
-.upload-doc-cotainer .upload-doc-right .mat-mdc-form-field {
-  width: 99%;
-}
+// .upload-doc-cotainer .upload-doc-right .mat-mdc-form-field {
+//   width: 99%;
+// }
 
-.upload {
-  width: 100%;
-}
+// .upload {
+//   width: 100%;
+// }
 /**** UPLOAD DOCUMENTS - ENDS ****/
 
 .select-technology-field {
@@ -252,7 +252,7 @@
 }
 
 .login-form{
-  max-height: 75vh;
+  height: calc(100% - 220px);
   overflow: auto;
 }
 
@@ -269,10 +269,14 @@
   width: 80%;
 }
 
+.form .form-column-left .form-column-left {
+  width: 100%;
+}
+
 .card-width {
   width: 450px;
   padding: 16px;
-  height: auto
+  height: auto;
 }
 
 .only-email-otp {
@@ -305,4 +309,11 @@
 .form-column-right .mat-mdc-form-field {
   width: 99%;
   margin-bottom: 12px;
+}
+
+.form-action-buttons {
+  margin-top: 8px;
+  display: flex !important;
+  justify-content: flex-end;
+  gap: 10px;
 }
