--- a/src/app/usit/components/dashboard/emp-applied-jobs-list/emp-applied-jobs-list.component.html
+++ b/src/app/usit/components/dashboard/emp-applied-jobs-list/emp-applied-jobs-list.component.html
@@ -14,7 +14,7 @@
 
               <!-- SNo Column -->
               <ng-container matColumnDef="SerialNum">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 1%">
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Serial Number" style="width: 1%">
                       S.No </th>
                   <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
               </ng-container>
