--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
@@ -13,7 +13,7 @@
 
               <!-- SNo Column mat-sort-header-->
               <ng-container matColumnDef="SerialNum">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+                  <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Serial Number"
                       mat-sort-header>
                       S.No </th>
                   <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
